--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==3.0.0
-Flask-Mail==0.9.1
-gunicorn==21.2.0
-langchain==0.1.0
-langchain-google-genai==0.0.5
-langchain-community==0.0.10
+Flask
+Flask-Mail
+gunicorn
+langchain
+langchain-google-genai
+langchain-community
 langchain-text-splitters
-sentence-transformers==2.2.2
-faiss-cpu>=1.12.0
-pypdf==3.17.4
-python-dotenv==1.0.0
+sentence-transformers
+faiss-cpu
+pypdf
+python-dotenv
