--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask
-Flask-Mail
-gunicorn
-langchain
-langchain-google-genai
-langchain-community
-langchain-text-splitters
-faiss-cpu
-pypdf
-python-dotenv
-langchain-groq
+Flask>=2.3.0
+Flask-Mail>=0.9.1
+gunicorn>=20.1.0
+langchain>=0.1.20
+langchain-google-genai>=0.0.19
+langchain-community>=0.0.10
+langchain-text-splitters>=0.0.8
+faiss-cpu>=1.7.4
+pypdf>=3.14.0
+python-dotenv>=1.0.0
+langchain-groq>=0.0.4
